# analytics-platform

./: .gitignore  Caddyfile  Caddyfile_dev  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
platform/: .dockerignore  Dockerfile  pyproject.toml
platform/models/: atlas.hcl
platform/models/analytics/databases/schema/: public.sql
platform/models/analytics/migrations/: 20260124143459.sql  atlas.sum
platform/models/operations/database/constraints/foreign_keys/: fk_slack_conversations_info__slack_teams_info.sql  fk_slack_messages_info__slack_conversations_info.sql  fk_slack_messages_info__slack_teams_info.sql  fk_slack_messages_info__slack_users_info.sql  fk_slack_users_info__slack_teams_info.sql
platform/models/operations/database/constraints/unique_keys/: uq_slack_assistant_context_store__team_id_user_id_channel_id_thread_ts.sql  uq_slack_conversations_info__channel_id_team_id.sql  uq_slack_message_info__ts_channel_id.sql  uq_slack_teams_info__team_id.sql  uq_slack_users_info__user_id_team_id.sql
platform/models/operations/database/tables/: slack_assistant_context_store.sql  slack_conversations_info.sql  slack_messages_info.sql  slack_teams_info.sql  slack_users_info.sql
platform/models/operations/migrations/: 20260123183343.sql  atlas.sum
platform/src/: initialize_dbs.py  settings.py  tasks.py
platform/src/api/: Dockerfile  main.py
platform/src/api/routes/: base.py  endpoints.py
platform/src/api/routes/slack/: endpoints.py  slack_clients.py
platform/src/api/routes/slack/assistants/: endpoints.py  thread_context_changed.py  thread_started.py  use_message.py
platform/src/api/routes/slack/events/: app_home_opened.py  endpoints.py
platform/src/api/routes/slack/slash_commands/: endpoints.py  hello.py
platform/src/jobs/: add.py  endpoints.py
platform/src/services/: Dockerfile  tasks.py
platform/src/services/jobs/: add.py  endpoints.py
platform/src/utils/: analytics_db.py  db.py  slack_helpers.py
platform/src/utils/slack/: context_store.py
platform/tests/: test_add.py
(+3 files in other folders)
