[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.39.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies] 
dev = [
    "pytest>=9.0.2"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
